moved Review app files to separate directories

--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,3 @@
-:root {
-  --primary: #6940e1;
-  --secondry: #e7c658;
-  --red: rgb(231, 74, 74);
-  --green: rgb(71, 176, 48);
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: rgba(105, 64, 225, 0.12);
-  overflow-x: hidden;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-#root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.header,
-.footer {
-  text-align: center;
-  padding: 8px 16px;
-  background-color: var(--primary);
-  color: white;
-}
-
-.main {
-  max-width: 960px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 16px;
-  flex-grow: 1;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header nav {
-  display: flex;
-  gap: 16px;
-}
-
-.header a {
-  color: white;
-  text-decoration: none;
-}
-
-.header h1 a {
-  letter-spacing: 1px;
-}
-
-.header nav a {
-  font-size: 20px;
-  padding-bottom: 1px;
-  background: linear-gradient(90deg, currentcolor, currentcolor) no-repeat bottom left / 0 2px;
-  transition: 0.3s all;
-}
-
-.header nav a.active,
-.header nav a:hover {
-  background-size: 100% 2px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
